@@ -25,7 +25,6 @@ import android.hardware.Sensor;
 import android.hardware.SensorEvent;
 import android.hardware.SensorEventListener;
 import android.hardware.SensorManager;
-import android.os.Build;
 import android.os.Handler;
 import android.text.InputType;
 import android.text.method.PasswordTransformationMethod;
@@ -389,11 +388,6 @@ public class DefaultAndroidInput extends AbstractInput implements AndroidInput {
 				}
 			}
 
-			if (!isCursorCatched()) {
-				deltaX[0] = 0;
-				deltaY[0] = 0;
-			}
-
 			if (processor != null) {
 				final InputProcessor processor = this.processor;
 
@@ -403,22 +397,15 @@ public class DefaultAndroidInput extends AbstractInput implements AndroidInput {
 					currentEventTimeStamp = e.timeStamp;
 					switch (e.type) {
 					case KeyEvent.KEY_DOWN:
-						// Catching the cursor causes it to send D-pad events. Ignore them.
-						if (!isCursorCatched() || !(e.keyCode >= Keys.UP && e.keyCode <= Keys.CENTER)) {
-							processor.keyDown(e.keyCode);
-							keyJustPressed = true;
-							justPressedKeys[e.keyCode] = true;
-						}
+						processor.keyDown(e.keyCode);
+						keyJustPressed = true;
+						justPressedKeys[e.keyCode] = true;
 						break;
 					case KeyEvent.KEY_UP:
-						if (!isCursorCatched() || !(e.keyCode >= Keys.UP && e.keyCode <= Keys.CENTER)) {
-							processor.keyUp(e.keyCode);
-						}
+						processor.keyUp(e.keyCode);
 						break;
 					case KeyEvent.KEY_TYPED:
-						if (!isCursorCatched() || e.keyChar != Keys.UNKNOWN) {
-							processor.keyTyped(e.keyChar);
-						}
+						processor.keyTyped(e.keyChar);
 					}
 					usedKeyEvents.free(e);
 				}
@@ -461,6 +448,13 @@ public class DefaultAndroidInput extends AbstractInput implements AndroidInput {
 				len = keyEvents.size();
 				for (int i = 0; i < len; i++) {
 					usedKeyEvents.free(keyEvents.get(i));
+				}
+			}
+
+			if (touchEvents.isEmpty()) {
+				for (int i = 0; i < deltaX.length; i++) {
+					deltaX[0] = 0;
+					deltaY[0] = 0;
 				}
 			}
 
@@ -926,30 +920,10 @@ public class DefaultAndroidInput extends AbstractInput implements AndroidInput {
 
 	@Override
 	public void setCursorCatched (boolean catched) {
-		if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
-			View view = ((AndroidGraphics)app.getGraphics()).getView();
-			if (catched) {
-				view.requestPointerCapture();
-				view.setOnCapturedPointerListener(new View.OnCapturedPointerListener() {
-					@Override
-					public boolean onCapturedPointer (View view, MotionEvent motionEvent) {
-						deltaX[0] = (int)motionEvent.getX();
-						deltaY[0] = (int)motionEvent.getY();
-						return false;
-					}
-				});
-			} else {
-				view.releasePointerCapture();
-			}
-		}
 	}
 
 	@Override
 	public boolean isCursorCatched () {
-		if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
-			View view = ((AndroidGraphics)app.getGraphics()).getView();
-			return view.hasPointerCapture();
-		}
 		return false;
 	}
 
